--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body{
     color: white;
     background-color: rgba(0, 0, 0, 0.835);
     -webkit-box-shadow: -10px 0px 13px -7px #ffffff, 10px 0px 13px -7px #ffffff, 5px 5px 19px -4px rgb(255, 255, 255); 
-box-shadow: -10px 0px 13px -7px #ffffff, 10px 0px 13px -7px #ffffff, 5px 5px 19px -4px rgb(255, 255, 255);
+    box-shadow: -10px 0px 13px -7px #ffffff, 10px 0px 13px -7px #ffffff, 5px 5px 19px -4px rgb(255, 255, 255);
     
 }
 
@@ -195,4 +195,40 @@ box-shadow: 5px 5px 19px 7px #FFFFFF;
     color: rgba(255, 0, 0, 0.868);
     background-color: rgba(255, 255, 255, 0.471);
     cursor: pointer;
+}
+
+/* start and restart and timer  */
+
+.buttonContainer{
+    display: flex;
+    justify-content: space-around;
+}
+
+.sBtn , .rBtn {
+    padding: 10px;
+    margin: 10px;
+    font-weight: bold;
+    border: 5px solid rgb(180, 2, 2);
+    background-color: rgba(226, 62, 62, 0.51);
+    
+}
+
+.sBtn:hover , .rBtn:hover {
+    padding: 10px;
+    margin: 10px;
+    font-weight: bold;
+    border: 5px solid rgba(15, 252, 7, 0.858);
+    border-radius: 10px;
+    background-color: rgba(19, 155, 21, 0.51);
+    cursor: pointer;
+    
+}
+.timer {
+    text-align: center;
+    font-size: 20px;
+    padding: 5px;
+    width: 60px;
+    height: 30px;
+    border: 10px solid rgba(237, 22, 22, 0.514);
+    color: white;
 }
