--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body{
     border: 5px double blue;
     font-family: 'Bigshot One', cursive;
     text-align: center;
-    padding: 20px;
+    padding: 30px;
     margin: 20px;
     color: white;
     background-color: rgba(0, 0, 0, 0.835);
@@ -29,6 +29,11 @@ body{
 }
 
 /* .instructions */
+
+.centerIns{
+    display: flex;
+    justify-content:space-around;
+}
 
 .headerContainer .instructions {
     border: 3px double red;
@@ -202,6 +207,8 @@ box-shadow: 5px 5px 19px 7px #FFFFFF;
 .buttonContainer{
     display: flex;
     justify-content: space-around;
+    margin: 20px;
+    padding: 20px;
 }
 
 .sBtn , .rBtn {
@@ -231,4 +238,47 @@ box-shadow: 5px 5px 19px 7px #FFFFFF;
     height: 30px;
     border: 10px solid rgba(237, 22, 22, 0.514);
     color: white;
+}
+
+/* scoreboard  */
+
+.centerScore{
+    display: flex;
+    justify-content:space-around;
+}
+
+.scoreContainer {
+    margin: 20px ;
+    padding: 20px  ;
+    display: flex;
+    justify-content: space-between;
+    width: 50%;
+    background-image: url('https://images.unsplash.com/photo-1614850523011-8f49ffc73908?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80');
+    background-size: cover ;
+    color: white;
+    border: 5px double white;
+    font-family: 'Fredericka the Great', cursive;
+    -webkit-box-shadow: -10px 0px 13px -7px #ffffff, 10px 0px 13px -7px #ffffff, 5px 5px 19px -4px rgb(255, 255, 255); 
+    box-shadow: -10px 0px 13px -7px #ffffff, 10px 0px 13px -7px #ffffff, 5px 5px 19px -4px rgb(255, 255, 255);
+    
+}
+
+
+
+.playerOne , .playerTwo {
+    padding: 10px;
+    margin: 10px;
+    border: 3px solid rgba(245, 245, 245, 0.738);
+    /* background-color: rgba(31, 31, 223, 0.663); */
+    background: rgb(0,0,0);
+    background: linear-gradient(0deg, rgba(0,0,0,0.9300063775510204) 0%, rgba(0,12,255,0.9474990889212828) 100%);
+    
+}
+
+.playerOne h4 , .playerTwo h4{
+    padding: 10px;
+}
+
+.playOne , .playTwo {
+    text-align: center;
 }
