--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,24 @@ box-shadow: 5px 5px 19px 7px #FFFFFF;
     border: 2px solid black;
 }
 
+.noCard{
+    margin: 10px;
+    margin-top: 20px;
+    padding: 4px;
+    height: 50px;
+    /* background-color: rgba(0, 0, 0, 0.541); */
+    background-image: url('https://images.unsplash.com/photo-1614850523011-8f49ffc73908?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80');
+    background-size: cover;
+    border: 2px solid black;
+    color: rgb(255, 0, 0);
+    font-size: 20px;
+    text-decoration: line-through;
+}
+
+.noCard:hover{
+    text-decoration: line-through;
+}
+
 /* math  */
 
 .math h5  {
