--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@
     border: 1px solid black;
 } */
 
+
 body{
+    scroll-behavior:smooth;
     background: rgb(251,126,63);
     background: radial-gradient(circle, rgba(251,126,63,0.7988110422740524) 0%, rgba(71,70,252,1) 100%);
 }
